tests/agl/rejections/type/inference_coercion_not_evidence.agl
def choose[T](left: T, right: T) -> T = left
let value: decimal = choose(1, 2.5)
value
